@@ -1,5 +1,5 @@
 /* Memory allocation on the stack.
-   Copyright (C) 1995, 1999, 2001-2003 Free Software Foundation, Inc.
+   Copyright (C) 1995, 1999, 2001-2005 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published
@@ -20,8 +20,10 @@
    declarations.  Thanks to AIX.  Therefore we include it right after
    "config.h", not later.  */
 
-#ifndef _ALLOCA_H
-#define _ALLOCA_H
+/* Avoid using the symbol _ALLOCA_H here, as Bison assumes _ALLOCA_H
+   means there is a real alloca function.  */
+#ifndef _GNULIB_ALLOCA_H
+#define _GNULIB_ALLOCA_H
 
 /* alloca(N) returns a pointer (void* or char*) to N bytes of memory
    allocated on the stack, and which will last until the function returns.
@@ -65,4 +67,4 @@ extern char *alloca ();
 # endif
 #endif
 
-#endif /* _ALLOCA_H */
+#endif /* _GNULIB_ALLOCA_H */
