@@ -1,3 +1,7 @@
+2004-12-19  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* alloca_.h: Conditionalize on _GNULIB_ALLOCA_H, not _ALLOCA_H.
+
 2004-12-10  Bruno Haible  <bruno@clisp.org>
 
 	* obstack.h: Update from current gnulib version.
